Closed Bug 1807942 Opened 3 years ago Closed 3 years ago

WebGL/PDF.js in VMWare VM: Main process crash in gbm_bo_get_fd

Categories

(Core :: Widget: Gtk, defect, P1)

Firefox 108
x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox110 --- verified
firefox111 --- verified

People

(Reporter: hurui200320, Assigned: stransky)

References

(Blocks 1 open bug)

Details

(Keywords: crash, reproducible)

Crash Data

Attachments

(2 files)

Steps to reproduce:

Access https://www.jetbrains.com/idea/

Note: I asked my friend to test it. On fedora, with Xorg, it didn't crash, but it used a lot of CPU and lagged the whole computer. With Wayland, everything is fine. I'm using a VMWare VM.

Related crash report: https://crash-stats.mozilla.org/report/index/77169fdf-ddac-4683-ba93-a4fca0221229

It's worth noticing that all crashes happen in VM, specifically VMWare's VM.

Actual results:

The website started loading, and during the rendering, it crashed.

Expected results:

It should load the website normally. Mac and Windows version is fine, no issue at all.

Also, disabling hardware acceleration fixed the crash.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Crash Signature: [@ gbm_bo_get_fd ]
Keywords: crash
OS: Unspecified → Linux
Hardware: Unspecified → x86_64

The bug has a crash signature, thus the bug will be considered confirmed.

Status: UNCONFIRMED → NEW
Ever confirmed: true

I can reproduce the crash on Nightly111.0a1 Ubuntu22.04 Japanese VMWare client.

STR.

  1. Open https://www.africau.edu/images/default/sample.pdf

Actual:
Browser crashes bp-6208877c-0345-4793-9ec0-74c260230207

Priority: -- → P3
Summary: gbm_bo_get_fd crash (2 years later) → WebGL in VMWare VM: Main process crash in gbm_bo_get_fd
Summary: WebGL in VMWare VM: Main process crash in gbm_bo_get_fd → WebGL/PDF.js in VMWare VM: Main process crash in gbm_bo_get_fd

Please run on terminal with MOZ_LOG="Dmabuf:5" and attach the log here.
Thanks.

Flags: needinfo?(hurui200320)

Can you please attach content of about:support page from Firefox on VMWare's VM?
Thanks.

Assignee: nobody → stransky
Status: NEW → ASSIGNED

The patch here ensures we don't crash but I wonder why - looks like eglExportDMABUFImage is broken and does not export dmabuf file descriptors.

Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/6611ee841e4e [Linux] Don't crash when mGbmBufferObject is missing in DMABufSurfaceRGBA r=emilio https://hg.mozilla.org/integration/autoland/rev/8b26c9205d0d [Linux] Don't use dmabuf surface if ExportDMABUFImageMESA() fails to export dmabuf file descriptors r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

Comment on attachment 9316756 [details]
Bug 1807942 [Linux] Don't crash when mGbmBufferObject is missing in DMABufSurfaceRGBA r?emilio

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes on VMware OpenGL emulation where broken DRI is used.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We just check null pointer access.
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9316756 - Flags: approval-mozilla-beta?
Attachment #9316757 - Flags: approval-mozilla-beta?
Priority: P3 → P1

Err, sorry, looks like beta is already 111 :)

Flags: needinfo?(hurui200320)

Comment on attachment 9316756 [details]
Bug 1807942 [Linux] Don't crash when mGbmBufferObject is missing in DMABufSurfaceRGBA r?emilio

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes on VMware OpenGL emulation where broken DRI is used.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We just check null pointer access.
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9316756 - Flags: approval-mozilla-beta? → approval-mozilla-release?
Attachment #9316757 - Flags: approval-mozilla-release?
Attachment #9316757 - Flags: approval-mozilla-beta?

Comment on attachment 9316757 [details]
Bug 1807942 [Linux] Don't use dmabuf surface if ExportDMABUFImageMESA() fails to export dmabuf file descriptors r?emilio

Approved for our 110.0.1 dot release, thanks.

Attachment #9316757 - Flags: approval-mozilla-release? → approval-mozilla-release+
Attachment #9316756 - Flags: approval-mozilla-release? → approval-mozilla-release+

Reproduced the issue with Firefox 110.0 on Ubuntu 22.04.2 LTS VMware client by opening https://www.jetbrains.com/idea/ and https://www.africau.edu/images/default/sample.pdf. Crash report id 0527a077-25ca-4f51-b5dc-2c7b80230228.

Verified fixed on the same VMware system with Ubuntu 22.04.2 LTS by using Firefox 110.0.1 (20230227191043) and Firefox 111.0b6 while opening https://www.jetbrains.com/idea/ and https://www.africau.edu/images/default/sample.pdf. No crashes occur when opening the pages.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: