Bug 1807942 [Linux] Don't crash when mGbmBufferObject is missing in DMABufSurfaceRGBA r=emilio a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D169314